temp/lmgc90_dev/src/ChiPy/mailx/wrap_multiMAILx.h

 /**
  * @fn void multiMAILx_LoadBehaviours(void)
  * @brief load behaviours from bulk_behav 
  *
  * @cond PYDOC
  * python usage : multiMAILx_LoadBehaviours()
  * @endcond
  */
  extern "C" void multiMAILx_LoadBehaviours(void);
 /**
  * @fn void multiMAILx_LoadModels(void)
  * @brief load models from models
  *
  * @cond PYDOC
  * python usage : multiMAILx_LoadModels()
  * @endcond
  */
  extern "C" void multiMAILx_LoadModels(void);
 /**
  * @fn void multiMAILx_PushProperties(void)
  * @brief gives to model the couple of model,behavior used at gauss point
  *
  * @cond PYDOC
  * python usage : multiMAILx_PushProperties()
  * @endcond
  */
  extern "C" void multiMAILx_PushProperties(void);
 /**
  * @fn void multiMAILx_IncrementStep(void)
  * @brief initializes the current d.o.f and some driven d.o.f values 
  *
  * @cond PYDOC
  * python usage : multiMAILx_IncrementStep()
  * @endcond
  */
  extern "C" void multiMAILx_IncrementStep(void);
 /**
  * @fn void multiMAILx_ComputeMass(int * ivector_in=nullptr, int ilength_in=0)
  * @brief compute elementary mass and inertia of a list of bodies
  *
  * @cond PYDOC
  * python usage : multiMAILx_ComputeMass(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute mass and inertia
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_ComputeMass(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void multiMAILx_ComputeBulk(int * ivector_in=nullptr, int ilength_in=0)
  * @brief computes elementary stiffness and viscosity matrices  of a list of bodies
  *
  * @cond PYDOC
  * python usage : multiMAILx_ComputeBulk(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute stiffness and viscosity matrices
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_ComputeBulk(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void multiMAILx_ComputeFext(int * ivector_in=nullptr, int ilength_in=0)
  * @brief compute elementary external forces of a list of bodies
  *
  * @cond PYDOC
  * python usage : multiMAILx_ComputeFext(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute external forces
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_ComputeFext(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void multiMAILx_AssembKT(int * ivector_in=nullptr, int ilength_in=0)
  * @brief assemble pseudo mass matrix and apply drvdof of a list of bodies
  *
  * @cond PYDOC
  * python usage : multiMAILx_AssembKT(i_list)
  * @param i_list (list of integer) : list of bodies to assemble pseudo mass matrix and apply drvdof
  *        if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_AssembKT(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void multiMAILx_AssembRHS(int * ivector_in=nullptr, int ilength_in=0)
  * @brief assembles right hand side of a list of bodies
  *
  * @cond PYDOC
  * python usage : multiMAILx_AssembRHS(i_list)
  * @param i_list (list of integer) : list of bodies to assemble right hand side
  *        if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_AssembRHS(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn double multiMAILx_ComputeResidueNorm(int * ivector_in=nullptr, int ilength_in=0)
  * @brief computes the norm of the residue of a list of bodies
  *
  * @cond PYDOC
  * python usage : norm = multiMAILx_ComputeResidueNorm(i_list)
  * @param i_list (list of integer) : list of bodies to compute the norm of the residue
  *        if omitted works on all objects
  * @return norm (double) : Residue Norm
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of mULTIMAILx
  * @param[in] length (int)     : size of vector_in
  * @return norm (double)       : Residue Norm
  * @endcond
  */
  extern "C" double multiMAILx_ComputeResidueNorm(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void multiMAILx_ComputeFreeState(int * ivector_in=nullptr, int ilength_in=0)
  * @brief computes free (of interactions) state of a list of bodies
  *
  * @cond PYDOC
  * python usage : multiMAILx_ComputeFreeState(i_list)
  * @param i_list (list of integer) : list of bodies to compute free state
  *        if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_ComputeFreeState(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void multiMAILx_ComputeDof(int * ivector_in=nullptr, int ilength_in=0)
  * @brief computes the current d.o.f knowing all the forces/fluxses (free + contact) of a list of bodies
  *
  * @cond PYDOC
  * python usage : multiMAILx_ComputeDof(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute current d.o.f
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_ComputeDof(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void multiMAILx_ComputeField(int * ivector_in=nullptr, int ilength_in=0)
  * @brief computes elementary fields  of a list of bodies
  *
  * @cond PYDOC
  * python usage : multiMAILx_ComputeField(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute elementary fields
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_ComputeField(int * ivector_in=nullptr, int ilength_in=0);