external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_multiMAILx.f90


    if( length == 0 ) then  
      do i = 1, get_nb_multiMAILx()
        call write_xxx_dof_multiMAILx(1,i)
      end do
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      do i = 1, length
        call write_xxx_dof_multiMAILx(1,list(i))
      end do
    end if

  end subroutine

  subroutine LoadBehaviours() bind(c, name='multiMAILx_LoadBehaviours')
    implicit none

     call load_behaviours_multiMAILx 

  end subroutine


  subroutine LoadModels() bind(c, name='multiMAILx_LoadModels')
    implicit none

    call load_models_multiMAILx
    call update_existing_entities_multiMAILx
     
  end subroutine

  subroutine PushProperties() bind(c, name='multiMAILx_PushProperties')
    implicit none

     call push_ppset_multiMAILx

  end subroutine

!-----------------------------------------------------
!  computation
!-----------------------------------------------------

  subroutine IncrementStep() bind(c, name='multiMAILx_IncrementStep')
    implicit none

     call increment_multiMAILx 

  end subroutine

  subroutine ComputeMass(list_ids, length) bind(c, name='multiMAILx_ComputeMass')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] comp mass   ')
    call start_itimer(timer_id)

    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call compute_mass_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call compute_mass_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  subroutine ComputeBulk(list_ids, length) bind(c, name='multiMAILx_ComputeBulk')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] comp bulk   ')
    call start_itimer(timer_id)

    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call compute_bulk_multiMAILx(i)
        call compute_damping_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call compute_bulk_multiMAILx(list(i))
        call compute_damping_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  subroutine ComputeFext(list_ids, length) bind(c, name='multiMAILx_ComputeFext')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] comp Fext   ')
    call start_itimer(timer_id)

    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call compute_Fext_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call compute_Fext_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  subroutine AssembKT(list_ids, length) bind(c, name='multiMAILx_AssembKT')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] assemb KT   ')
    call start_itimer(timer_id)

    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call assemb_KT_multiMAILx(i)
        call apply_drvdof_KT_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call assemb_KT_multiMAILx(list(i))
        call apply_drvdof_KT_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  subroutine AssembRHS(list_ids, length) bind(c, name='multiMAILx_AssembRHS')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] assemb RHS  ')
    call start_itimer(timer_id)

    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call assemb_RHS_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call assemb_RHS_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  function ComputeResidueNorm(list_ids, length) bind(c, name='multiMAILx_ComputeResidueNorm')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    real(c_double) :: ComputeResidueNorm
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list
    !
    integer(c_int)  :: ibdy_Dofs, ibdy_Res
    real(c_double)  :: norm_res,norm_Dofs,tmp
    !
    character(len=70) :: cout
 
    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] compResNorm ')
    call start_itimer(timer_id)
 
    ibdy_Dofs = -1
    ibdy_Res  = -1

    ComputeResidueNorm = 0.d0
    tmp                = 0.d0
 
    ibdy_Dofs = 0
    ibdy_Res  = 0

    if( length == 0 ) then  
 
      do i = 1, get_nb_multiMAILx()
        call compute_residue_norm_multiMAILx(norm_res,norm_Dofs,i)
        if( norm_Dofs > tmp ) then
          ibdy_Dofs = i
          tmp    = norm_Dofs
        end if
        if( norm_res > ComputeResidueNorm ) then
          ibdy_Res = i
          ComputeResidueNorm = norm_res
        end if
      end do
 
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      do i = 1, length
        call compute_residue_norm_multiMAILx(norm_res,tmp,list(i))
        if( norm_Dofs > tmp ) then
          tmp    = norm_Dofs
          ibdy_Dofs = list(i)
        end if
        if( norm_res > ComputeResidueNorm ) then
          ibdy_Res=list(i)
          ComputeResidueNorm = norm_res
        end if
      end do
    end if

    call logmes(' ')   
    write(cout,'(1X,A3,3X,A17,D10.3,3X,A7,I7)')  ' @ ','MaxRes/MaxFint = ',ComputeResidueNorm,'body : ',ibdy_Res  
    call logmes(cout)
    write(cout,'(1X,A3,3X,A17,D10.3,3X,A7,I7)')  ' @ ','MaxDDofs /MaxDofs    = ',tmp ,'body : ',ibdy_Dofs 
    call logmes(cout)
 
    call stop_itimer(timer_id)
 
    if (is_new) ComputeResidueNorm = tmp


  end function

  subroutine ComputeFreeState(list_ids, length) bind(c, name='multiMAILx_ComputeFreeState')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] comp Free S ')
    call start_itimer(timer_id)

    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call compute_free_state_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call compute_free_state_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  subroutine ComputeDof(list_ids, length) bind(c, name='multiMAILx_ComputeDof')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] comp dof    ')
    call start_itimer(timer_id)

    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call compute_dof_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call compute_dof_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  subroutine ComputeField(list_ids, length) bind(c, name='multiMAILx_ComputeField')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] comp field  ')
    call start_itimer(timer_id)
